--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@fullcalendar/core": "^4.3.1",
-    "@fullcalendar/daygrid": "^4.3.0"
+    "@fullcalendar/daygrid": "^4.3.0",
+    "htmlto": "^1.1.2",
+    "phantom": "^6.3.0"
   }
 }
